# medotmd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/jane-doe/: ME.md
skills/create-me-md/: SKILL.md
skills/create-me-md/agents/: openai.yaml
skills/create-me-md/references/: medotmd-cli.md
src/: agent.rs  backup.rs  cli.rs  error.rs  file_write.rs  identity.rs  main.rs  opencode.rs  output.rs  target.rs  update.rs
tests/: cli.rs
