[package]
name = "medotmd"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny CLI for linking ~/.me/ME.md into local coding agent instruction files"
repository = "https://github.com/nitodeco/medotmd"
license = "MIT"
keywords = ["cli", "agents", "codex", "claude", "opencode"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
time = { version = "0.3.53", features = ["formatting", "macros", "local-offset"] }
