[package]
name = "medotmd"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny CLI for linking ~/.me/ME.md into local coding agent instruction files"
repository = "https://github.com/nitodeco/medotmd"
license = "MIT"
keywords = ["cli", "agents", "codex", "claude", "opencode"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
time = { version = "0.3.53", features = ["formatting", "macros", "local-offset"] }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }
